k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls: 
  - hosts:
    - cybernotes.space
    secretName: cybernotes-tls
  rules:
  - host: cybernotes.space
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend: 
          service:
            name: backend-service
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
